--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "homepage": "https://michalponiatowski.github.io/lipna.ink/",
   "dependencies": {
+    "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.21.1",
-    "styled-components": "^6.1.6"
+    "styled-components": "^6.1.6",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
