--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   },
   "homepage": "https://michalponiatowski.github.io/lipna.ink/",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.5",
+    "browser-image-compression": "^2.0.2",
+    "date-fns": "^3.6.0",
     "framer-motion": "^10.18.0",
     "nanoid": "^5.0.4",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-multi-carousel": "^2.8.4",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.6",
     "swiper": "^11.0.5"
