--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.6",
     "swiper": "^11.0.5"
   },
