--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.6",
     "react-loading-skeleton": "^3.4.0",
-    "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
+    "redux-toolkit": "^1.1.2",
     "styled-components": "^6.1.6",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "yet-another-react-lightbox": "^3.17.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
