--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.0",
