--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check-unused-deps": "depcheck"
   },
   "homepage": "https://michalponiatowski.github.io/lipna.ink/",
   "dependencies": {
@@ -16,6 +17,7 @@
     "browser-image-compression": "^2.0.2",
     "date-fns": "^3.6.0",
     "framer-motion": "^10.18.0",
+    "leaflet": "^1.9.4",
     "nanoid": "^5.0.4",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -37,6 +39,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "depcheck": "^1.4.7",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
